# pomdp-viterbi-speech

./: .gitignore  README.md  my_solution.py  pyproject.toml
samples/little_prince/: observation_actions.txt  state_action_state_weights.txt  state_observation_weights.txt  state_weights.txt
src/temporal_reasoner/: __init__.py  cli.py  constants.py  exceptions.py  parser.py  solver.py  synthetic.py
tests/: test_solver.py
tools/: generate_synthetic_speech.py
