[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-reasoner"
version = "0.1.0"
description = "POMDP / Viterbi solver for CS 561 temporal reasoning scenarios."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Seany", email = "seany@example.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6.0",
]

[project.scripts]
temporal-reasoner = "temporal_reasoner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["I"]  # import sorting

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

